JM CI + MVN Artefakt Erstellung
- added PMD
- added UnitTest
- added mvn:jpackage
- added artefakt generierung
- added CI
- refactored DB storageLocation + access
- refactored GeraetTypHandler to work standalone
- refactored Singleton pattern in StatusLog